# CalibAnything

./: .gitignore  CMakeLists.txt  CUDA_ACCELERATION_PLAN.md  DATA_FORMAT.md  PHASE2_3_INTEGRATION.md  README.md  README_CUDA.md  alignment.py  calib.json  commands.txt  extrinsic.txt  manual_calib.json  run_calib.sh  test_params.json
datasampleformat/scene1/cam04/: lucid_calib.json
include/: calibration.hpp  calibration_gpu.cuh  cuda_utils.cuh  dataloader.hpp  pointcloud_gpu.cuh  random_search_gpu.cuh
output/daytimetraffic_cam03/: calib.json
output/scene2_cam02/: calib.json
scripts/: alignment.py  cloud_visualizer.py  convert_lucid_calib.py  convert_lucid_json.py  crop_images.py  downsample_png.py  jitter_calibration.py  normal_cloud_visualizer.py  parameter_sweep.py  parameter_sweep_no_cli.py  process_lucid_pipeline.py  processed_mask.py  requirements.txt  wide_cloud_visualizer.py
src/: calibration.cpp  calibration_gpu.cu  pointcloud_gpu.cu  random_search_gpu.cu
src/kernels/: accumulation_kernel.cu  batch_search_kernel.cu  downsampling_kernel.cu  filtering_kernel.cu  projection_kernel.cu  score_kernel.cu
